--- a/5. NgClient/ResturantClient/src/app/Modules/auth/Auth/Auth.component.html
+++ b/5. NgClient/ResturantClient/src/app/Modules/auth/Auth/Auth.component.html
@@ -1,21 +1,29 @@
-<p>
-  Auth worksddddd!
-</p>
+<div class="d-flex justify-content-center">
+  <div class="card col-4">
+    <div class="card-header">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav row">
 
-<div class="card">
-
-
-  <div class="header">
-    <span class="col-6">
-      <app-Login></app-Login>
-    </span>
-    <span class="col-6">
-      <app-Register></app-Register>
-    </span>
-  </div>
+              <a class="nav-item nav-link active" routerLink="/Login">
+                <h1 class="col-6">Login</h1>
+              </a>
 
 
-  <div class="card-body">
-    <aouter-Outlet></aouter-Outlet>
+              <a class="nav-item nav-link" routerLink="/Register">
+                <h1 class="col-6">Register</h1>
+              </a>
+
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    <div class="card-body">
+      <router-outlet></router-outlet>
+      <br>
+      <br>
+      <br>
+    </div>
   </div>
 </div>
